# ComfyUI-Discord-RPC-portable-ver

./: .gitignore  LICENSE  README.md  __init__.py  config.py  config_default.json  discord_rpc_manager.py  pyproject.toml  requirements.txt  state_tracker.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml
web/: discord_rpc_settings.js
