[project]
name = "comfyui-discord-rpc"
description = "Discord Rich Presence integration for ComfyUI - shows generation status in Discord"
version = "1.0.0"
license = {text = "MIT"}
dependencies = ["pypresence>=4.3.0"]

[project.urls]
Repository = "https://github.com/davehornik/comfyui-discord-rpc"

[tool.comfy]
PublisherId = "davehornik"
DisplayName = "ComfyUI Discord Rich Presence"
Icon = ""
