[project]
name = "comfyui-discord-rpc"
description = "Discord Rich Presence integration for ComfyUI - shows generation status in Discord"
version = "1.0.1"
license = {text = "MIT"}
dependencies = ["pypresence>=4.3.0"]

[project.urls]
Repository = "https://github.com/davehornik/ComfyUI-Discord-RPC"

[tool.comfy]
PublisherId = "davehornik"
DisplayName = "ComfyUI Discord Rich Presence"
Icon = "https://raw.githubusercontent.com/davehornik/ComfyUI-Discord-RPC/master/comfy_banner.png"
